<resources>
    <!-- 스플래시 페이지 -->
    <string name="app_name">TMBG</string>
    <string name="app_logo_name">T문방구</string>

    <!-- 회원 가입, 로그인 페이지  -->
    <string name="kakao_login_btn">카카오 로그인</string>
    <string name="naver_login_btn">네이버 로그인</string>
    <string name="sign_up">Sign up</string>
    <string name="input_nickname">닉네임 입력</string>
    <string name="splash_text">start</string>
    <string name="hint_text">김봉년</string>
    <string name="submit_sign_up_btn">애들 관리하러 가기</string>

    <!--로그아웃 회원탈퇴-->
    <string name="register_out">회원탈퇴</string>
    <string name="my_email">qud5252@naver.com</string>
    <string name="my_name">김병년</string>
    <string name="my_nick">김븅년</string>
    <string name="confirm">확인</string>
    <string name="confirm_withdraw">정말 탈퇴하나요?</string>
    <string name="withdraw_msg">진짜로..?ㅠㅠ</string>
    <string name="change">변경하기</string>

    <!-- 팀 모달 -->
    <string name="team_count">조 갯수</string>
    <string name="team_destination">문화재</string>
    <string name="team_location_dropdown">문화재 이름을 입력하세요</string>
    <string name="team_name">반 이름</string>
    <string name="hint_team_count">4</string>
    <string name="hint_team_destination">수원 화성</string>
    <string name="hint_team_name">싸피 초등학교 1학년 1반</string>
    <string name="team_create">생성 하기</string>

    <!-- 팀 관리 페이지 -->
    <string name="manage_team">팀 관리 페이지</string>
    <string name="room_name">방 이름</string>
    <string name="team_num">1조</string>
    <string name="invite_code">초대 코드</string>
    <string name="end_experience">채점 종료 및 만족도 조사하기</string>

    <!-- 팀 상세 페이지 -->
    <string name="team_leader">조장</string>
    <string name="is_leader">👑</string>
    <string name="team_members">조원</string>
    <string name="progress">진행률</string>
    <string name="team_picture">인증 사진</string>
    <string name="never_visit_again">다녀간 장소</string>


    <!--  일정 페이지  -->
    <string name="schedule_title">일정 관리</string>
    <string name="schedule_create_title">일정 생성하기</string>
    <string name="schedule_time">시간</string>
    <string name="schedule_time_hint">00</string>
    <string name="schedule_time_string">시</string>
    <string name="schedule_minute_string">분</string>
    <string name="schedule_content_string">일정 내용</string>
    <string name="schedule_content_hint">일정 내용을 입력하세요.</string>
    <string name="schedule_create">생성하기</string>
    <string name="schedule_content">일정 내용</string>
    <string name="schedule_from">시작</string>
    <string name="schedule_to">종료</string>
    <string name="schedule_edit_title">일정 수정하기</string>
    <string name="schedule_update">수정하기</string>

    <!-- 설정 모달 -->
    <string name="settings">설정</string>
    <string name="log_out">로그아웃</string>
    <string name="with_draw">회원탈퇴</string>

    <!-- 일정 -->
    <string name="current_time">10:00 ~ 12:00</string>
    <string name="team_no">1반</string>
    <string name="team_real_name">구미 초등학교 1반</string>

    <!-- report -->


</resources>